netwerk/protocol/http/HttpBaseChannel.cpp
@@ -396,6 +396,9 @@ nsresult HttpBaseChannel::Init(nsIURI* aURI, uint32_t aCaps,
 
   RefPtr<mozilla::dom::BrowsingContext> browsingContext;
   mLoadInfo->GetBrowsingContext(getter_AddRefs(browsingContext));
+  if (!browsingContext) {
+    mLoadInfo->GetAssociatedBrowsingContext(getter_AddRefs(browsingContext));
+  }
 
   const nsCString& languageOverride =
       browsingContext ? browsingContext->Top()->GetLanguageOverride()
